* jpki-pdf-signer 0.4 ビルド環境をJava 8からJava 11に変更して32ビット版の開発を終了し64ビット専用となりました。これにともない、32ビット/64ビットを切り替えるための仕組みであったjpki-wrapperプロジェクトの内容をjpki-pdf-signerプロジェクトに取り込みました。jpki-pdf-signerはjpki-wrapperに依存せずに動作するようになりました。
git-svn-id: https://svn.osdn.net/svnroot/jpki/jpki-pdf-signer/trunk@25 f30e787d-f73b-42d4-b4a2-d790b30a04d0